chore(admin): added total field to listScenario response openapi
