# gen/rest/v1/go/admin/admin.gen.go
@@ -1,6 +1,6 @@
 // Package admin provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version 2.5.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
 package admin
 
 import (
@@ -603,7 +603,7 @@ type ListScenariosResponseObject interface {
 	VisitListScenariosResponse(w http.ResponseWriter) error
 }
 
-type ListScenarios200JSONResponse []Scenario
+type ListScenarios200JSONResponse ScenarioList
 
 func (response ListScenarios200JSONResponse) VisitListScenariosResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
