# gen/rest/v1/go/admin/dto.gen.go
@@ -1,6 +1,6 @@
 // Package admin provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version 2.5.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
 package admin
 
 import (
@@ -102,6 +102,12 @@ type Scenario struct {
 	Status    ScenarioStatus     `json:"status"`
 	UpdatedAt *time.Time         `json:"updatedAt,omitempty"`
 	Url       string             `json:"url"`
+}
+
+// ScenarioList defines model for ScenarioList.
+type ScenarioList struct {
+	Items []Scenario `json:"items"`
+	Total int64      `json:"total"`
 }
 
 // ScenarioStatus defines model for ScenarioStatus.
